--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ kotlinVersion=1.7.20
 kotlin.code.style=official
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
+jacksonVersion=2.13.4
