--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ kotlin.code.style=official
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 jacksonVersion=2.13.4
+ktormVersion=3.5.0
