adding Javalin web server stuff

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,17 @@ jobs:
     name: Unit Tests
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:12.2
+        env:
+          POSTGRES_USER: ktapi
+          POSTGRES_PASSWORD: local
+          POSTGRES_DB: ktapi
+        ports:
+          - 6643:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
