--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 jacksonVersion=2.13.4
 ktormVersion=3.5.0
+javalinVersion=4.6.4
