--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,16 @@ services:
       POSTGRES_PASSWORD: local
       POSTGRES_USER: ktapi
       POSTGRES_DB: ktapi
+  ktapi-redis:
+    image: "redis"
+    ports:
+      - "6640:6379"
+    command: [ "sh","-c","exec redis-server" ]
+  ktapi-rabbitmq:
+    image: "rabbitmq:3-management"
+    ports:
+      - "6641:5672"
+      - "6642:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ktapi
+      RABBITMQ_DEFAULT_PASS: local
